erDiagram

clientes {
    int id PK "SERIAL"
    varchar nome "NOT NULL"
    varchar telefone "NOT NULL, UNIQUE"
    varchar cpf "NOT NULL, UNIQUE"
}

betoneiras {
    int id PK "SERIAL"
    varchar modelo "NOT NULL"
    real valor "NOT NULL"
    varchar status "NOT NULL"
}

alugueis {
    int id PK "SERIAL"
    int id_cliente FK "NOT NULL"
    int id_betoneira FK "NOT NULL"
    date data_inicio "NOT NULL"
    date data_prevista_termino "NOT NULL"
    date data_termino_real
    varchar status "NOT NULL"
}

clientes ||--o{ alugueis : "realiza"
betoneiras ||--o{ alugueis : "é alugada em"
